--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,6 @@ markdown: kramdown
 highlighter: rouge
 permalink: pretty
 paginate: 5
-exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
+exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.stable.md"]
 
 gems: [jekyll-paginate, jekyll-feed]
