Add LinkedIn Profile
Based heavily on the work of:
Gilles Gouaillardet <gilles@rist.or.jp>

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ twitter_username: SBootstrap
 github_username:  davidtmiller
 facebook_username:  StartBootstrap
 email_username:  your-email@yourdomain.com
+linkedin_username: yourLinkedInUserName
 
 # Google Analytics
 # To enable google analytics, uncomment below line with a valid Google Tracking ID
